Moved button text to strings.xml

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Nanodegree Apps"
+        android:text="@string/title"
         android:id="@+id/textView"
         android:layout_centerHorizontal="true" />
 
@@ -17,7 +17,7 @@
         android:id="@+id/spotify_streamer_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Spotify Streamer"
+        android:text="@string/spotify_streamer_text"
         android:layout_below="@+id/textView"
         android:layout_marginTop="40dp"
         android:layout_alignLeft="@+id/capstone_button"
@@ -32,7 +32,7 @@
         android:id="@+id/scores_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Football Scores"
+        android:text="@string/scores_text"
         android:layout_below="@+id/spotify_streamer_button"
         android:layout_alignRight="@+id/capstone_button"
         android:layout_alignEnd="@+id/capstone_button"
@@ -46,7 +46,7 @@
         android:id="@+id/library_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Library App"
+        android:text="@string/library_text"
         android:layout_below="@+id/scores_button"
         android:layout_alignLeft="@+id/capstone_button"
         android:layout_alignStart="@+id/capstone_button"
@@ -60,7 +60,7 @@
         android:id="@+id/build_it_bigger_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Build It Bigger"
+        android:text="@string/build_it_bigger_text"
         android:layout_below="@+id/library_button"
         android:layout_alignLeft="@+id/capstone_button"
         android:layout_alignStart="@+id/capstone_button"
@@ -68,13 +68,13 @@
         android:layout_alignEnd="@+id/capstone_button"
         android:layout_marginTop="5dp"
         android:background="@drawable/button"
-        android:onClick="openMakeItBiggerApp"/>
+        android:onClick="openBuildItBiggerApp"/>
 
     <Button
         android:id="@+id/xyz_reader_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="XYZ Reader"
+        android:text="@string/xyz_reader_text"
         android:layout_below="@+id/build_it_bigger_button"
         android:layout_alignLeft="@+id/capstone_button"
         android:layout_alignStart="@+id/capstone_button"
@@ -88,7 +88,7 @@
         android:id="@+id/capstone_button"
         android:layout_width="225dp"
         android:layout_height="wrap_content"
-        android:text="Capstone: My Own App"
+        android:text="@string/capstone_text"
         android:layout_below="@+id/xyz_reader_button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
